# adiffuso

./: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
.github/workflows/: django.yml
docker/: Dockerfile
docs/: docker.md  varie.md
src/: manage.py  package-lock.json  package.json
src/albdif/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/albdif/config/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
src/albdif/management/commands/: crea_dati_test.py
src/albdif/migrations/: 0001_initial.py  0002_prenotazione_costo_soggiorno_and_more.py  0003_camera_numero_posti_letto_and_more.py  0004_alter_visitatore_utente.py  0005_alter_host_utente.py  0006_servizio_alter_host_options_remove_camera_services_and_more.py  0007_alter_proprieta_descrizione.py  0008_prenotazione_version.py
src/albdif/templates/: base.html
src/albdif/templates/albdif/: calendario_prenotazione_detail.html  calendario_prenotazioni_list.html  camera_detail.html  camere_list.html  form_pagamento.html  form_prenotazione.html  form_prenotazione_modifica.html  home.html  login.html  prenotazione_detail.html  prezzi_camera_list.html  prezzo_camera_detail.html  profilo.html  (+4 more)
src/albdif/utils/: fixtures.py  pipeline.py  utility.py
src/static/css/: albdif.css
src/static/js/: calcola_prezzo_prenotazione.js  evidenzia_calendario.js  valida_prenotazione.js
src/theme/static_src/: package.json
tests/: .coveragerc  conftest.py  test_commands.py  test_models.py  test_pipeline.py  test_utility.py  test_views.py
(+5 files in other folders)
